@@ -8,8 +8,10 @@ import (
 	"path/filepath"
 	"sort"
 	"strings"
+	"time"
 
 	"philosopher/lib/msg"
+	"philosopher/lib/spc"
 
 	"philosopher/lib/bio"
 	"philosopher/lib/cla"
@@ -456,4 +458,95 @@ func (evi *Evidence) PSMLocalizationReport(decoyTag string, hasRazor, hasDecoys 
 	sys.CopyFile(output, filepath.Base(output))
 
 	return
+}
+
+// PepXMLReport report PSMs in pep.xml format
+func (evi *Evidence) PepXMLReport() {
+
+	// collect database information
+	var dtb dat.Base
+	dtb.Restore()
+
+	var proteinDescription = make(map[string]string)
+	for _, j := range dtb.Records {
+		proteinDescription[j.PartHeader] = j.Description
+	}
+
+	t := time.Now()
+
+	// collect source file names
+	var sourceMap = make(map[string]uint8)
+	var sources []string
+	for _, i := range evi.PSM {
+		s := strings.Split(i.Spectrum, ".")
+		sourceMap[s[0]]++
+	}
+
+	for i := range sourceMap {
+		sources = append(sources, i)
+	}
+
+	sort.Strings(sources)
+
+	var p spc.PepXML
+
+	p.MsmsPipelineAnalysis.Date = t.Format(time.ANSIC)
+
+	as := &spc.AnalysisSummary{
+		Analysis: "philosopher",
+		Time:     t.Format(time.ANSIC),
+	}
+	p.MsmsPipelineAnalysis.AnalysisSummary = append(p.MsmsPipelineAnalysis.AnalysisSummary, *as)
+
+	for _, i := range evi.PSM {
+
+		spectrumName := strings.Split(i.Spectrum, "#")
+
+		sq := &spc.SpectrumQuery{
+			StartScan:            i.Scan,
+			EndScan:              i.Scan,
+			AssumedCharge:        i.AssumedCharge,
+			Spectrum:             spectrumName[0],
+			Index:                i.Index,
+			PrecursorNeutralMass: i.PrecursorNeutralMass,
+			RetentionTimeSec:     i.RetentionTime,
+			PrecursorIntensity:   i.Intensity,
+			SearchResult: spc.SearchResult{
+				SearchHit: []spc.SearchHit{
+					{
+						Peptide:            i.Peptide,
+						Massdiff:           i.Massdiff,
+						CalcNeutralPepMass: i.CalcNeutralPepMass,
+						NextAA:             i.NextAA,
+						PrevAA:             i.PrevAA,
+						IsRejected:         0,
+						ProteinDescr:       i.ProteinDescription,
+						HitRank:            i.HitRank,
+						Protein:            i.Protein,
+						AnalysisResult: []spc.AnalysisResult{
+							{
+								Analysis: "peptideprophet",
+								PeptideProphetResult: spc.PeptideProphetResult{
+									Probability: i.Probability,
+								},
+							},
+						},
+					},
+				},
+			},
+		}
+
+		for j := range i.MappedProteins {
+			ap := &spc.AlternativeProtein{
+				Protein:     j,
+				Description: proteinDescription[j],
+			}
+			sq.SearchResult.SearchHit[0].AlternativeProteins = append(sq.SearchResult.SearchHit[0].AlternativeProteins, *ap)
+		}
+
+		p.MsmsPipelineAnalysis.MsmsRunSummary.SpectrumQuery = append(p.MsmsPipelineAnalysis.MsmsRunSummary.SpectrumQuery, *sq)
+	}
+
+	p.Write()
+
 }
