@@ -1,5 +1,6 @@
 ### Added
 - A new Workspace option allows the use of a custom folder as a temporary folder.
+- The Database now supports multiple database IDs (separate them with comma)
 
 ### Changed
 - The "master" GitHub repository was renamed to "main".
